fix: fix card display, effects on icon in footer/ add: live timer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/logo-gifts.png">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>christmas-shop</title>
 </head>
 <body>
@@ -156,19 +157,22 @@
                 <p>The New Year is Coming Soon...</p>
                 <div class="action_time">
                     <div class="time">
-                        <h2>47</h2>
+                        <h2 id="days"></h2>
                         <h4>days</h4>
                     </div>
+                    <div class="vertical"></div>
                     <div class="time">
-                        <h2>5</h2>
+                        <h2 id="hours"></h2>
                         <h4>hours</h4>
                     </div>
+                    <div class="vertical"></div>
                     <div class="time">
-                        <h2>34</h2>
+                        <h2 id="minutes"></h2>
                         <h4>minutes</h4>
                     </div>
+                    <div class="vertical"></div>
                     <div class="time">
-                        <h2>12</h2>
+                        <h2 id="seconds"></h2>
                         <h4>seconds</h4>
                     </div>
                 </div>
@@ -203,10 +207,14 @@
         
         <div class="footer_contacts">
             <div class="social_media">
-                <img src="./img/Social-Container.png" alt="tg">
-                <img src="./img/Social-Container2.png" alt="fb">
-                <img src="./img/Social-Container3.png" alt="inst">
-                <img src="./img/Social-Container4.png" alt="x">
+                <!-- <img src="./img/Social-Container.png" alt="tg"> -->
+                <!-- <img src="./img/Social-Container2.png" alt="fb"> -->
+                <!-- <img src="./img/Social-Container3.png" alt="inst">
+                <img src="./img/Social-Container4.png" alt="x"> -->
+                <i class="fa-brands fa-telegram"></i>
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-x-twitter"></i>
             </div>
             <p class="author">© Copyright 2025, All Rights Reserved</p>
             <a href="https://rs.school/" target="_blank" class="rss">Made in Rolling Scopes School</a>
