--- a/gifts.html
+++ b/gifts.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/christmas-tree.svg">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Gifts</title>
 </head>
 <body>
@@ -184,10 +185,14 @@
         
         <div class="footer_contacts">
             <div class="social_media">
-                <img src="./img/Social-Container.png" alt="tg">
-                <img src="./img/Social-Container2.png" alt="fb">
-                <img src="./img/Social-Container3.png" alt="inst">
-                <img src="./img/Social-Container4.png" alt="x">
+                <!-- <img src="./img/Social-Container.png" alt="tg"> -->
+                <!-- <img src="./img/Social-Container2.png" alt="fb"> -->
+                <!-- <img src="./img/Social-Container3.png" alt="inst">
+                <img src="./img/Social-Container4.png" alt="x"> -->
+                <i class="fa-brands fa-telegram"></i>
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-x-twitter"></i>
             </div>
             <p class="author">© Copyright 2025, All Rights Reserved</p>
             <a href="https://rs.school/" target="_blank" class="rss">Made in Rolling Scopes School</a>
